# game-slang-miner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/agents/: slang-classifier.md  slang-definer.md  slang-reviewer.md
.github/workflows/: ci.yml
agents/: classifier.md  definer.md  reviewer.md
config/: config.yaml
data/knowledge/: entities.csv
data/samples/: comments.jsonl
data/seeds/: known_slang.csv
skill/game-slang-miner/: SKILL.md
src/slang_miner/: __init__.py  cli.py  feedback.py  pipeline.py  schema.py
src/slang_miner/agents/: __init__.py  base.py  classifier.py  definer.py  reviewer.py
src/slang_miner/mining/: __init__.py  entropy.py  miner.py  ngram.py  pmi.py
src/slang_miner/review/: __init__.py  exporter.py
tests/: test_smoke.py
